# simato

./: .gitignore  CMakeLists.txt  readme.md
scripts/: actionGenerator.py  actionvisu.py  pddl.py  visu_time.py
src/: agent_dialog.cpp  agent_dialog.h  colors.cpp  colors.h  main.cpp  main_window.cpp  main_window.h  map_viewer.cpp  map_viewer.h  mission_data.hpp  mission_dialog.cpp  mission_dialog.h  mission_model.cpp  mission_model.h  mission_viewer.cpp  mission_viewer.h  template.json  wp_group_dialog.cpp  wp_group_dialog.h
